Proyecto2/Kubernetes/grpc-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client
spec:
  replicas: 1
  selector:
    matchLabels:
      name: grpc-client
  template:
    metadata:
      labels:
        name: grpc-client
    spec:
      containers:
        - name: grpc-client
          image: luisamariao/grpc-client:latest
          ports:
            - containerPort: 3000
