Proyecto2/Kubernetes/grpc-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      name: grpc-server
  template:
    metadata:
      labels:
        name: grpc-server
    spec:
      containers:
        - name: grpc-server
          image: luisamariao/grpc-server:latest
          ports:
            - containerPort: 3001
