Proyecto2/Kubernetes/redis-api-deployment copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      containers:
        - name: grpc-server
          image: luisamariao/grpc-server:latest
          ports:
            - containerPort: 3001
