Proyecto2/Kubernetes/redis-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-api
  template:
    metadata:
      labels:
        app: redis-api
    spec:
      containers:
        - name: redis-api
          image: luisamariao/redis-api:latest
          ports:
            - containerPort: 3000
