Proyecto2/Kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-redis
  namespace: so1p2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-redis
  template:
    metadata:
      labels:
        app: my-redis
    spec:
      containers:
        - name: my-redis
          image: redis
          ports:
            - containerPort: 6379
