Proyecto2/Kubernetes/grpc-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-client
  namespace: so1p2
spec:
  selector:
    app: grpc-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
