Proyecto2/Kubernetes/grpc-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-server
  namespace: so1p2
spec:
  selector:
    name: grpc-server
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: LoadBalancer
