Proyecto2/Kubernetes/redis-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-api-service
  namespace: so1p2
spec:
  selector:
    app: redis-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
