Proyecto2/Kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-redis
  namespace: so1p2
spec:
  selector:
    app: my-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: LoadBalancer
