Proyecto2/Kubernetes/socket-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socket-server
  namespace: so1p2
spec:
  selector:
    app: socket-server
  ports:
    - protocol: TCP
      port: 3021
      targetPort: 3021
  type: LoadBalancer
