Proyecto2/Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /insert
spec:
  rules:
    - host: luisamariao.com
      http:
        paths:
          - path: /grpc-client
            pathType: Prefix
            backend:
              service:
                name: grpc-client
                port:
                  number: 3000
          - path: /redis-api-service
            pathType: Prefix
            backend:
              service:
                name: redis-api-service
                port:
                  number: 3000
